bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: value Abs is not a member of object Math
  if (Math.abs(100-n) <= 10 || Math.Abs(200-n) <= 10) {
                                    ^