bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (Math.abs(100-n) <= 10 || Math.Abs(200-n) <= 10) {
    return true
  }
  else {
    return false
  }
}